// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the Controls component should match the snapshot 1`] = `
<div
  className="controls panel"
>
  <button
    className="toggle-btn"
    disabled={true}
  >
    Lock Gate
  </button>
  <button
    className="toggle-btn"
  >
    Close Gate
  </button>
</div>
`;

exports[`the Controls component should match the snapshot when closed 1`] = `
<div
  className="controls panel"
>
  <button
    className="toggle-btn"
    disabled={false}
  >
    Lock Gate
  </button>
  <button
    className="toggle-btn"
  >
    Open Gate
  </button>
</div>
`;

exports[`the Controls component should match the snapshot when locked 1`] = `
<div
  className="controls panel"
>
  <button
    className="toggle-btn"
    disabled={true}
  >
    Unlock Gate
  </button>
  <button
    className="toggle-btn"
    disabled={true}
  >
    Close Gate
  </button>
</div>
`;

exports[`the Controls component should match the snapshot when not closed 1`] = `
<div
  className="controls panel"
>
  <button
    className="toggle-btn"
    disabled={true}
  >
    Lock Gate
  </button>
  <button
    className="toggle-btn"
  >
    Close Gate
  </button>
</div>
`;

exports[`the Controls component should match the snapshot when not locked 1`] = `
<div
  className="controls panel"
>
  <button
    className="toggle-btn"
    disabled={true}
  >
    Lock Gate
  </button>
  <button
    className="toggle-btn"
    disabled={false}
  >
    Close Gate
  </button>
</div>
`;
